--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
           <fieldset class="search-form__fieldset">
             <h2 class="search-form__fieldset-title">Время суток</h2>
             <div class="search-form__checkbox-list">
-            <label class="search-form__label">
-             <input type="checkbox" name="time" value="morning" class="search-form__checkbox visually-hidden" />
-               <span class="search-form__label-text">Утро</span>
-                  </label>
-                  <label class="search-form__label">
-                    <input type="checkbox" name="time" value="afternoon" class="search-form__checkbox visually-hidden" />
-                    <span class="search-form__label-text">День</span>
-                  </label>
-                  <label class="search-form__label">
-                    <input type="checkbox" name="time" value="night" class="search-form__checkbox visually-hidden" />
-                    <span class="search-form__label-text">Ночь</span>
-                  </label>
-                </div>
+              <label class="search-form__label">
+                <input type="checkbox" name="time" value="morning" class="search-form__checkbox visually-hidden" />
+                <span class="search-form__pseudo-checkbox"></span>
+                <span class="search-form__label-text">Утро</span>
+              </label>
+              <label class="search-form__label">
+                <input type="checkbox" name="time" value="afternoon" class="search-form__checkbox visually-hidden" />
+                <span class="search-form__pseudo-checkbox"></span>
+                <span class="search-form__label-text">День</span>
+              </label>
+              <label class="search-form__label">
+                <input type="checkbox" name="time" value="night" class="search-form__checkbox visually-hidden" />
+                <span class="search-form__pseudo-checkbox"></span>
+                <span class="search-form__label-text">Ночь</span>
+              </label>
+            </div>
           </fieldset>
           <button type="submit" class="button search-form__submit-button">
             Найти
